<resources>
    <string name="app_name">Android Antivirus</string>
    <string name="av_name">Antivirus Name</string>
    <string name="detail">Detail Antivirus</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="author_name">Christopher Aldora Tjitrabudi</string>
    <string name="email">christopher.at99@gmail.com</string>
    <string name="about_me">Aplikasi ini dibuat sebagai syarat kelulusan kelas Belajar Membuat
Aplikasi Android untuk Pemula dari Dicoding. </string>
    <string name="title_activity_about">About</string>
    <string name="photo">Photo</string>
    <string name="logo">Logo</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="country">Country</string>
    <string name="specification">Specification</string>
    <string name="antivirus_detail">Antivirus Detail</string>
    <string name="antivirus_title">Antivirus Title</string>
</resources>
